Fix events grid on small screens

--- a/desparchado/static/sass/events.sass
+++ b/desparchado/static/sass/events.sass
@@ -66,6 +66,12 @@
         line-height: 21px
         color: $dark-gray
 
+@media (max-width: 768px)
+  #events
+    .event
+      width: 100%
+
+
 /* Event detail */
 
 #event-detail
